# from-.inverted_index-import-index_initializer

./: .gitignore  README.md  app.py  cli.py  collect_and_index.py  pyproject.toml  requirements.txt  telegram_stats.csv  test_inverted_index.py  test_performance.py
skipgramm/: sentences.txt  skipgram_main.py
src/index_creater/: __init__.py  inverted_index.py
src/utils/: __init__.py  bm_search.py  db_reader.py  encoder.py  preprocessor.py
