[tool.poetry]
name = "blekanov-3"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
peewee = "^3.17.5"
flask = "^3.0.3"
numpy = "^1.26.4"
nltk = "^3.8.1"
pymorphy2 = "^0.9.1"
click = "^8.1.7"
tqdm = "^4.65.0"

[tool.poetry.scripts]
collect-and-index = "collect_and_index:main"
search = "cli:cli"
serve = "app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
